# learn-linear-algebra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  notebooks.md  pyproject.toml
chapters/: README.md
chapters/01-foundations/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/01-foundations/code/python/: 01_foundations.ipynb
chapters/01-foundations/code/sage/: 01_foundations.ipynb
chapters/02-vectors-and-geometry/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/03-linear-systems/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/04-linear-transformations/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/05-subspaces-basis-dimension/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/06-abstract-vector-spaces/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/07-orthogonality-and-least-squares/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/08-determinants/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/09-eigenvalues-and-diagonalization/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
chapters/10-svd-and-applications/: README.md  exercises.md  extracts.yaml  notes.md  sources.md  worked-examples.md
scripts/: extract_pages.py  nlm-init-chapter.sh
(+14 files in other folders)
