[project]
name = "learn-linear-algebra"
version = "0.1.0"
description = "Self-study linear algebra curriculum (10 chapters, anchored on Bretscher and Saveliev) with Python notebooks and NotebookLM integration."
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
